[package]
name = "skojy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = "0.4.3"
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["macros"] }
tokio-tungstenite = "0.20.0"
serde = { version = "1.0.188", features = ["derive"] }
boolinator = "2.4.0"
itertools = "0.11.0"